--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -4,4 +4,6 @@
 	<Shields.Search>Search: </Shields.Search>
 	<Shields.ResetModSettingsToDefault>Reset mod settings to default</Shields.ResetModSettingsToDefault>
 	<Shields.ExplanationTitle>Set weapons to be usable or not usable with shields.</Shields.ExplanationTitle>
+	<Shields.ShowMeleeWeapons>Show melee weapons</Shields.ShowMeleeWeapons>
+	<Shields.ShowRangeWeapons>Show range weapons</Shields.ShowRangeWeapons>
 </LanguageData>
